@@ -38,6 +38,7 @@ CREATE TABLE ir_translation (
     id INTEGER PRIMARY KEY AUTOINCREMENT,
     lang VARCHAR,
     src TEXT,
+    src_md5 VARCHAR(32) NOT NULL,
     name VARCHAR,
     res_id INTEGER DEFAULT 0,
     value TEXT,
